   * Fixed bug #19188: Turn dialog always speaks of Konrad in tutorial
   * Added: NativeClient port.
   * Fixed: crash when using fullscreen on Mac OS using SDL nightly builds.
   * Optimized screen update (zooming, ToD change, etc)
   * Optimized framerate by removing a lot of empty terrain images
   * Optimized perfomance cost of complex local ToD areas

Version 1.9.12:
 * Language and i18n:
   * Updated translations: British English, Czech, French, German, Hungarian,
     Indonesian, Italian, Latin, Latvian, Old English, Russian, Slovak
 * Multiplayer:
   * Fixed missed side init if controller changes at side progression
     (bug #16299)
   * Fixed user interface not updated if controller changes (bug #19056)
 * Whiteboard:
   * Fix invalid actions not being detected until another action is created
   * Erase invalid actions when you try to execute them
   * Disable access to Suppose Dead action until we can find a better UI for it
   * Fix bug #18774: Recalling with the whiteboard enabled causes crash
   * Fix bug #19061: Crash on starting most campaign scenarios
   * Fix getting "not enough gold" message when executing planned recruits/recalls
   * Ghost the unit at starting position of planned moves
   * On mouseover, display orb and xp bar on planned moves with accurate status
   * Mouseover on last planned move of a unit displays accurate movement left
   * Re-enabled multi-turn moves
 * Miscellaneous and bug fixes:
   * Fixed bug #19095: fixed a gcc warning when compiling under OpenBSD
   * Fixed bug #19096: fixed linker errors on OpenBSD when using the CMake
     build system

Version 1.9.11:
 * Campaigns:
   * Sceptre of Fire:
     * A Bargain is Struck: added missing hero overlays to Alanin and the
       caravans
     * A Bargain is Struck: added find_vacant=yes to avoid unstoring Alanin
       upon Rugnur or another player's unit
     * The Dragon: fixed Rugnur being recalled not fully healed