@@ -69,6 +69,8 @@ Version 1.9.12+svn:
    * Optimized screen update (zooming, ToD change, etc)
    * Optimized framerate by removing a lot of empty terrain images
    * Optimized perfomance cost of complex local ToD areas
+   * Fixed bug #16571: Multiplayer login error with certain username or
+     password formats
 
 Version 1.9.12:
  * Language and i18n:
